--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,14 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.0') {
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude module: 'recyclerview-v7'
+    }
+
     compile appDependencies.appCompat
     compile appDependencies.supportDesign
     compile appDependencies.recyclerView
@@ -69,17 +77,14 @@ dependencies {
     compile appDependencies.retrofitConverter
     compile appDependencies.retrofitLogger
 
-//    compile appDependencies.exoPlayer
-//    compile 'com.devbrackets.android:exomedia:4.0.3'
-
-//    compile 'com.devbrackets.android:playlistcore:1.1.1'
-
-//    compile 'com.google.android.exoplayer:extension-okhttp:r2.5.1'
-
     compile 'com.google.android.exoplayer:exoplayer:r2.4.0'
 
     compile appDependencies.butterKnife
     apt appDependencies.butterknifeCompiler
+
+    testCompile testDependencies.mockito
+
+    androidTestCompile testDependencies.mockitoAndroid
 
     testCompile testDependencies.junit
 }
