--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -32,7 +32,7 @@ ext {
     robolectricVersion = '3.0'
     jUnitVersion = '4.12'
     assertJVersion = '1.7.1'
-    mockitoVersion = '1.9.5'
+    mockitoVersion = '2.7.22'
     dexmakerVersion = '1.0'
     espressoVersion = '2.0'
     testingSupportLibVersion = '0.1'
@@ -55,7 +55,6 @@ ext {
             retrofitAdapter    : "com.squareup.retrofit2:adapter-rxjava2:${retrofitVersion}",
             retrofitConverter  : "com.squareup.retrofit2:converter-gson:${retrofitVersion}",
             retrofitLogger     : "com.squareup.okhttp3:logging-interceptor:${loggingInterceptorVersion}",
-            mockito            : "org.mockito:mockito-core:${mockitoVersion}",
             dexmaker           : "com.google.dexmaker:dexmaker:${dexmakerVersion}",
             dexmakerMockito    : "com.google.dexmaker:dexmaker-mockito:${dexmakerVersion}",
             espresso           : "com.android.support.test.espresso:espresso-core:${espressoVersion}",
@@ -70,13 +69,14 @@ ext {
     ]
 
     testDependencies = [
-            junit      : "junit:junit:${jUnitVersion}",
-            assertj    : "org.assertj:assertj-core:${assertJVersion}",
-            mockito    : "org.mockito:mockito-core:${mockitoVersion}",
-            robolectric: "org.robolectric:robolectric:${robolectricVersion}",
-            espresso   : "com.android.support.test.espresso:espresso-core:${espressoVersion}",
-            testRunner : "com.android.support.test:runner:${testRunnerVersion}",
-            testRules  : "com.android.support.test:rules:${testRunnerVersion}",
-            uiAutomator: "com.android.support.test.uiautomator:uiautomator-v18:${uiAutomatorVersion}"
+            junit         : "junit:junit:${jUnitVersion}",
+            assertj       : "org.assertj:assertj-core:${assertJVersion}",
+            mockito       : "org.mockito:mockito-core:${mockitoVersion}",
+            mockitoAndroid: "org.mockito:mockito-android:${mockitoVersion}",
+            robolectric   : "org.robolectric:robolectric:${robolectricVersion}",
+            espresso      : "com.android.support.test.espresso:espresso-core:${espressoVersion}",
+            testRunner    : "com.android.support.test:runner:${testRunnerVersion}",
+            testRules     : "com.android.support.test:rules:${testRunnerVersion}",
+            uiAutomator   : "com.android.support.test.uiautomator:uiautomator-v18:${uiAutomatorVersion}"
     ]
 }
