Provide list of recipe from widget and open the recipe detail page when recipe on widget clicked

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,23 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
         <activity android:name=".presentation.recipedetail.RecipeDetailActivity"/>
         <activity android:name=".presentation.recipedetail.RecipeStepDetailActivity"/>
+
+        <receiver android:name=".dev.BakingAppWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/baking_app_widget_info"/>
+        </receiver>
+
+        <service
+            android:name=".dev.WidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+
     </application>
 
 </manifest>
