Display ingredients of a selected recipe on widget

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
             android:name=".dev.WidgetService"
             android:permission="android.permission.BIND_REMOTEVIEWS" />
 
+        <service android:name=".dev.BakingAppService" />
+
     </application>
 
 </manifest>
